reinstated code accidentally deleted

--- a/index.css
+++ b/index.css
@@ -40,6 +40,14 @@ body {
 
 }
 
+#contact-me {
+  font-family: 'Pacifico', cursive;
+}
+
+#contact-me:hover {
+  height: auto;
+}
+
 #social-media {
   display: table;
   width: 100%;
