--- a/playground.css
+++ b/playground.css
@@ -4,3 +4,15 @@
   text-align: center;
   padding-top: 50px;
 }
+
+
+.page-footer {
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.footer-copyright {
+  background-color: #F95738;
+  color: white;
+  font-size: 0.5em;
+}
