--- a/playground.css
+++ b/playground.css
@@ -16,6 +16,10 @@ h4 {
   font-family: 'Karla';
 }
 
+.card-title:hover {
+  text-decoration: underline;
+}
+
 .card-text {
   font-size: 0.8em;
 }
@@ -39,17 +43,17 @@ h4 {
 
 @media (min-width: 62em) {
     .card-columns {
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
     }
 }
 
 @media (min-width: 75em) {
     .card-columns {
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
     }
 }
 
@@ -64,47 +68,10 @@ h4 {
   font-size: 0.5em;
 }
 
-.color-table {
-	margin: 2em 2em 5em;
-	border-collapse:collapse;
-	border:none;
-	border-spacing:0;
-	font-size:100%;
-	}
-.color-table th {
-	padding: 0 1em 0 0;
-	text-align: right;
-	vertical-align: middle;
-	font-size: 100%;
-	font-weight: normal;
-	border: none;
-	}
-.color-table td.sample {
-	width:6em; height:6em;
-	padding: 10px;
-	text-align:center;
-	vertical-align:middle;
-	font-size:90%;
-	border: 1px solid white;
-	white-space:nowrap;
-	}
-.color-table .white { margin-bottom:0.2em; color:white }
-.color-table .black { margin-top:0.2em; color:black }
+.links {
+  color: black;
+}
 
-
-.a-primary-1 { background-color: #5fa718ff }
-.a-primary-2 { background-color: #e44b4dff }
-.a-primary-0 { background-color: #3d4c50ff }
-.a-primary-3 { background-color: #f2b6b5ff }
-
-
-.a-secondary-1-1 { background-color: #781714ff }
-.a-secondary-1-2 { background-color: #eb4135ff }
-.a-secondary-1-0 { background-color: #8c9b9fff }
-.a-secondary-1-3 { background-color: #447811ff }
-
-
-.a-secondary-2-1 { background-color: #c4352fff }
-.a-secondary-2-2 { background-color: #3d4c50ff }
-.a-secondary-2-0 { background-color: #447811ff }
-.a-secondary-2-3 { background-color: #5fa718ff }
+.links:hover {
+  color: black;
+}
