--- a/playground.css
+++ b/playground.css
@@ -1,3 +1,12 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.content {
+  min-height: 100%;
+}
+
 #header {
   height: 170px;
   font-family: 'Karla';
@@ -16,12 +25,16 @@ h4 {
   font-family: 'Karla';
 }
 
+#main-page {
+  padding-bottom: 50px;
+}
+
 .card-title:hover {
   text-decoration: underline;
 }
 
 .card-text {
-  font-size: 0.8em;
+  font-size: 0.6em;
 }
 
 
@@ -43,23 +56,23 @@ h4 {
 
 @media (min-width: 62em) {
     .card-columns {
-        -webkit-column-count: 2;
-        -moz-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
     }
 }
 
 @media (min-width: 75em) {
     .card-columns {
-        -webkit-column-count: 2;
-        -moz-column-count: 2;
-        column-count: 2;
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
     }
 }
 
 .page-footer {
-  padding-top: 0;
-  margin-top: 0;
+  height: 50px;
+  margin-top: -50px;
 }
 
 .footer-copyright {
