--- a/playground.css
+++ b/playground.css
@@ -71,8 +71,8 @@ h4 {
 }
 
 .page-footer {
-  height: 50px;
-  margin-top: -50px;
+  padding-top: 0;
+  margin-top: 1.1em;
 }
 
 .footer-copyright {
