--- a/css/playground.css
+++ b/css/playground.css
@@ -1,6 +1,7 @@
 html, body {
   height: 100%;
   margin: 0;
+  background-color: white;
 }
 
 .content {
@@ -27,11 +28,6 @@ h4 {
 
 #main-page {
   padding-bottom: 50px;
-  background-color:
-}
-
-.card {
-  height: 100px;
 }
 
 .card-title:hover {
@@ -75,16 +71,12 @@ h4 {
     }
 }
 
-.page-footer {
-  padding-top: 0;
-  margin-top: 1.1em;
+.footer-copyright {
+  background-color: #F95738 !important;
+  color: white !important;
+  font-size: 0.8em;
 }
 
-.footer-copyright {
-  background-color: #F95738;
-  color: white;
-  font-size: 0.5em;
-}
 
 .links {
   color: black;
