--- a/css/cv.css
+++ b/css/cv.css
@@ -35,7 +35,7 @@ body {
 
 #profile-statement {
   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 20px;
+  font-size: 1em;
   line-height: 1.3;
 
 }
@@ -50,49 +50,56 @@ body {
 
 #social-media {
   display: table;
-  width: 100%;
+  width: 90%;
   height: auto;
   text-align: left;
-  padding-left: 15px;
+  padding-left: 5%;
+  margin-left: 5%;
   padding-top: 20px;
   border-radius: 30px;
   background-color: #F4D35E;
   color: #EE964B;
+  font-size: 0.7em;
+  font-weight: bold;
 }
 
 .fab {
-  color: #F4D35E;
+  color: #EE964B;
   font-size: 3em;
-  padding: 0.1em;
+  padding: 0.2em;
   vertical-align: middle;
+
 }
 
 .fas {
-  color: #F4D35E;
+  color: #EE964B;
   font-size: 3em;
-  padding: 0.1em;
+  padding: 0.2em;
   vertical-align: middle;
 }
 
 .address {
   margin-bottom: 0;
   text-align: left;
-  font-size: 14px;
+  font-size: 1em;
   margin-top: 0;
   line-height: 1.2;
   padding-top: 0;
   padding-bottom: 0;
 }
 
+.addressbox {
+  padding-bottom: 1em;
+}
+
 .links {
-  color: white;
+  color: #EE964B;
   text-align: center;
-  font-size: 14px;
   text-decoration: none;
 }
 
 .links:hover {
-  color: white;
+  color: #EE964B;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
