finishing cosmetic touches for cards and section title

--- a/css/playground.css
+++ b/css/playground.css
@@ -30,6 +30,12 @@ h4 {
   padding-bottom: 50px;
 }
 
+.title {
+  font-family: 'Karla';
+  padding-bottom: 1em;
+  text-align: center;
+}
+
 .card-title:hover {
   text-decoration: underline;
 }
