--- a/css/cv.css
+++ b/css/cv.css
@@ -12,11 +12,11 @@ font-family: 'Noto Sans JP', sans-serif;
 */
 
 body {
-  background-color: #EBEBD3;
+  background-color: white;
 }
 
 #sidebar {
-  background-color: #EE964B;
+  background-color: #08D093;
   color: white;
   text-align: center;
   padding: 5vh;
@@ -26,7 +26,7 @@ body {
   border-radius: 50%;
   border-style: solid;
   border-width: thick;
-  border-color: #F4D35E;
+  border-color: #176ECF;
 }
 
 #name {
@@ -57,14 +57,14 @@ body {
   margin-left: 5%;
   padding-top: 20px;
   border-radius: 30px;
-  background-color: #F4D35E;
-  color: #EE964B;
+  background-color: #176ECF;
+  color: white;
   font-size: 0.7em;
   font-weight: bold;
 }
 
 .fab {
-  color: #EE964B;
+  color: white;
   font-size: 3em;
   padding: 0.2em;
   vertical-align: middle;
@@ -72,7 +72,7 @@ body {
 }
 
 .fas {
-  color: #EE964B;
+  color: white;
   font-size: 3em;
   padding: 0.2em;
   vertical-align: middle;
@@ -93,13 +93,13 @@ body {
 }
 
 .links {
-  color: #EE964B;
+  color: white;
   text-align: center;
   text-decoration: none;
 }
 
 .links:hover {
-  color: #EE964B;
+  color: white;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -111,7 +111,7 @@ body {
 }
 
 .section-title {
-  color: #EE964B;
+  color: #176ECF;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -161,7 +161,7 @@ body {
 }
 
 .footer-copyright {
-  background-color: #F95738 !important;
+  background-color: #176ECF !important;
   color: white !important;
   font-size: 0.8em;
 }
