--- a/css/cv.css
+++ b/css/cv.css
@@ -1,16 +1,3 @@
-/*color theme
-#083D77 - dark cerulian / blue
-#EBEBD3 - eggshell / beige
-#F4D35E - grain / yellow
-#EE964B - peach
-#F95738 - orange
-
-fonts
-font-family: 'Pacifico', cursive;
-font-family: 'Noto Sans JP', sans-serif;
-
-*/
-
 body {
   background-color: white;
 }
@@ -50,17 +37,17 @@ body {
 
 #social-media {
   display: table;
-  width: 90%;
+  width: 100%;
   height: auto;
   text-align: left;
-  padding-left: 5%;
-  margin-left: 5%;
-  padding-top: 20px;
+  padding: 1em;
+  margin-left: auto;
   border-radius: 30px;
   background-color: #176ECF;
   color: white;
-  font-size: 0.7em;
+  font-size: 1em;
   font-weight: bold;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 .fab {
