updating color scheme and sm box

--- a/css/cv.css
+++ b/css/cv.css
@@ -12,7 +12,7 @@ body {
 #profile-picture {
   border-radius: 50%;
   border-style: solid;
-  border-width: thick;
+  border-width: 0.7em;
   border-color: #176ECF;
 }
 
