--- a/css/playground.css
+++ b/css/playground.css
@@ -1,7 +1,12 @@
-html, body {
-  height: 100%;
-  margin: 0;
+body {
   background-color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer{
+    margin-top: auto;
 }
 
 #header {
@@ -59,4 +64,8 @@ h4 {
 
 a {
   color: white;
+}
+
+#dynamic-ecosystem {
+  padding: 50px;
 }
